--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remixicon/react": "^4.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.7.0",
     "motion": "^12.23.26",
     "next": "16.1.1",
     "react": "19.2.3",
