--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.1",
     "@remixicon/react": "^4.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
